--- a/Assets/Stash.Sample/Resources/StashCheckoutUI.uxml
+++ b/Assets/Stash.Sample/Resources/StashCheckoutUI.uxml
@@ -1,50 +1,71 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="StashCheckoutUI.uss" />
-    <ui:VisualElement name="Background" style="flex-grow: 1; background-color: rgb(40, 40, 40); padding: 20px;">
-        <ui:Label text="Stash Checkout Demo" display-tooltip-when-elided="true" name="Title" style="font-size: 24px; -unity-font-style: bold; color: rgb(255, 255, 255); margin-bottom: 20px; -unity-text-align: upper-center;" />
-        <ui:ScrollView>
-            <ui:VisualElement name="UserSection" class="section">
-                <ui:Label text="User Information" display-tooltip-when-elided="true" class="section-title" />
-                <ui:TextField picking-mode="Position" label="User ID" value="user_id" name="UserID" />
-                <ui:TextField picking-mode="Position" label="Email" value="email@provider.com" name="Email" />
-                <ui:TextField picking-mode="Position" label="Display Name" value="user_name" name="DisplayName" />
-                <ui:TextField picking-mode="Position" label="Avatar URL" value="https://storage.googleapis.com/stash-demo-f9550.firebasestorage.app/avatars/6564ced3-c163-4b0d-aa4e-c1a19e42aa65.png" name="AvatarURL" />
-                <ui:TextField picking-mode="Position" label="Profile URL" value="https://storage.googleapis.com/stash-demo-f9550.firebasestorage.app/avatars/6564ced3-c163-4b0d-aa4e-c1a19e42aa65.png" name="ProfileURL" />
-            </ui:VisualElement>
-            <ui:VisualElement name="ShopSection" class="section">
-                <ui:Label text="Shop Information" display-tooltip-when-elided="true" class="section-title" />
-                <ui:TextField picking-mode="Position" label="Shop Handle" value="stashdemo" name="ShopHandle" />
-                <ui:TextField picking-mode="Position" label="Currency" value="USD" name="Currency" />
-                <ui:TextField picking-mode="Position" label="API Key" value="p0SVSU3awmdDv8VUPFZ_adWz_uC81xXsEY95Gg7WSwx9TZAJ5_ch-ePXK2Xh3B6o" name="ApiKey" />
-            </ui:VisualElement>
-            <ui:VisualElement name="ItemsSection" class="section">
-                <ui:VisualElement style="flex-direction: row; justify-content: space-between; align-items: center;">
-                    <ui:Label text="Items" display-tooltip-when-elided="true" class="section-title" />
-                    <ui:Button text="Add Item" display-tooltip-when-elided="true" name="AddItemButton" class="button-secondary" style="margin-top: 0;" />
+    <ui:VisualElement name="Background" style="flex-grow: 1; background-color: rgb(40, 40, 40); padding: 20px; min-width: 320px;">
+        <ui:Label text="Stash Pay Playground" display-tooltip-when-elided="true" name="Title" class="title" />
+        
+        <!-- Tab Buttons -->
+        <ui:VisualElement name="TabButtons" class="tab-buttons">
+            <ui:Button text="User Info" display-tooltip-when-elided="true" name="UserTabButton" class="tab-button tab-button-active" />
+            <ui:Button text="Shop Info" display-tooltip-when-elided="true" name="ShopTabButton" class="tab-button" />
+            <ui:Button text="Items" display-tooltip-when-elided="true" name="ItemsTabButton" class="tab-button" />
+        </ui:VisualElement>
+        
+        <ui:ScrollView name="MainScrollView" horizontal-scroller-visibility="Hidden" vertical-scroller-visibility="Auto" class="main-scroll-view">
+            <!-- Tab Content Containers -->
+            <ui:VisualElement name="TabsContainer" style="flex-grow: 1;">
+                <!-- User Information Tab -->
+                <ui:VisualElement name="UserSection" class="section tab-content tab-content-active">
+                    <ui:Label text="User Information" display-tooltip-when-elided="true" class="section-title" />
+                    <ui:TextField picking-mode="Position" label="User ID" value="user_id" name="UserID" class="input-field" />
+                    <ui:TextField picking-mode="Position" label="Email" value="email@provider.com" name="Email" class="input-field" />
+                    <ui:TextField picking-mode="Position" label="Display Name" value="user_name" name="DisplayName" class="input-field" />
+                    <ui:TextField picking-mode="Position" label="Avatar URL" value="https://storage.googleapis.com/stash-demo-f9550.firebasestorage.app/avatars/6564ced3-c163-4b0d-aa4e-c1a19e42aa65.png" name="AvatarURL" class="input-field" />
+                    <ui:TextField picking-mode="Position" label="Profile URL" value="https://storage.googleapis.com/stash-demo-f9550.firebasestorage.app/avatars/6564ced3-c163-4b0d-aa4e-c1a19e42aa65.png" name="ProfileURL" class="input-field" />
                 </ui:VisualElement>
-                <ui:VisualElement name="ItemsContainer">
-                    <!-- Template item that will be duplicated -->
-                    <ui:VisualElement name="Item0" class="item-container">
-                        <ui:VisualElement style="flex-direction: row; justify-content: space-between; align-items: center; margin-bottom: 5px;">
-                            <ui:Label text="Item 1" style="font-size: 16px; -unity-font-style: bold; color: rgb(220, 220, 220);" />
-                            <ui:Button text="Remove" display-tooltip-when-elided="true" name="RemoveItem0" class="button-delete" style="margin-top: 0;" />
+                
+                <!-- Shop Information Tab -->
+                <ui:VisualElement name="ShopSection" class="section tab-content">
+                    <ui:Label text="Shop Information" display-tooltip-when-elided="true" class="section-title" />
+                    <ui:TextField picking-mode="Position" label="Shop Handle" value="stashdemo" name="ShopHandle" class="input-field" />
+                    <ui:TextField picking-mode="Position" label="Currency" value="USD" name="Currency" class="input-field" />
+                    <ui:TextField picking-mode="Position" label="API Key" value="p0SVSU3awmdDv8VUPFZ_adWz_uC81xXsEY95Gg7WSwx9TZAJ5_ch-ePXK2Xh3B6o" name="ApiKey" class="input-field" />
+                </ui:VisualElement>
+                
+                <!-- Items Tab -->
+                <ui:VisualElement name="ItemsSection" class="section tab-content">
+                    <ui:VisualElement class="row-container section-header">
+                        <ui:Label text="Items" display-tooltip-when-elided="true" class="section-title" />
+                        <ui:Button text="Add Item" display-tooltip-when-elided="true" name="AddItemButton" class="button-secondary mobile-friendly-button" style="margin-top: 0;" />
+                    </ui:VisualElement>
+                    <ui:VisualElement name="ItemsContainer">
+                        <!-- Template item that will be duplicated -->
+                        <ui:VisualElement name="Item0" class="item-container">
+                            <ui:VisualElement class="row-container section-header">
+                                <ui:Label text="Item 1" class="item-title" />
+                                <ui:Button text="Remove" display-tooltip-when-elided="true" name="RemoveItem0" class="button-delete mobile-friendly-button" style="margin-top: 0;" />
+                            </ui:VisualElement>
+                            <ui:TextField picking-mode="Position" label="Item ID" value="item_id" name="ItemID0" class="input-field" />
+                            <ui:TextField picking-mode="Position" label="Price Per Item" value="199" name="PricePerItem0" class="input-field" />
+                            <ui:IntegerField label="Quantity" value="1" name="Quantity0" class="input-field" />
+                            <ui:TextField picking-mode="Position" label="Image URL" value="https://api.braincloudservers.com/files/portal/g/15152/metadata/products/battle_pass.png" name="ItemImageURL0" class="input-field" />
+                            <ui:TextField picking-mode="Position" label="Name" value="item_name" name="ItemName0" class="input-field" />
+                            <ui:TextField picking-mode="Position" label="Description" value="item_description" name="ItemDescription0" class="input-field" />
                         </ui:VisualElement>
-                        <ui:TextField picking-mode="Position" label="Item ID" value="item_id" name="ItemID0" />
-                        <ui:TextField picking-mode="Position" label="Price Per Item" value="199" name="PricePerItem0" />
-                        <ui:IntegerField label="Quantity" value="1" name="Quantity0" />
-                        <ui:TextField picking-mode="Position" label="Image URL" value="https://api.braincloudservers.com/files/portal/g/15152/metadata/products/battle_pass.png" name="ItemImageURL0" />
-                        <ui:TextField picking-mode="Position" label="Name" value="item_name" name="ItemName0" />
-                        <ui:TextField picking-mode="Position" label="Description" value="item_description" name="ItemDescription0" />
                     </ui:VisualElement>
                 </ui:VisualElement>
             </ui:VisualElement>
+            
+            <!-- Checkout Section (always visible) -->
             <ui:VisualElement name="CheckoutSection" class="section">
-                <ui:Button text="Create Checkout Link" display-tooltip-when-elided="true" name="CreateCheckoutButton" class="button-primary" />
+                <ui:Button text="Checkout" display-tooltip-when-elided="true" name="CreateCheckoutButton" class="button-primary mobile-friendly-button" />
                 <ui:VisualElement name="ResponseContainer" style="display: none; margin-top: 20px;">
                     <ui:Label text="Response" display-tooltip-when-elided="true" class="section-title" />
-                    <ui:TextField picking-mode="Position" label="Checkout URL" name="CheckoutURL" readonly="true" multiline="true" />
-                    <ui:TextField picking-mode="Position" label="Checkout ID" name="CheckoutID" readonly="true" />
-                    <ui:Button text="Open in Browser" display-tooltip-when-elided="true" name="OpenBrowserButton" class="button-secondary" />
+                    <ui:TextField picking-mode="Position" label="Checkout URL" name="CheckoutURL" readonly="true" multiline="true" class="input-field response-field" />
+                    <ui:TextField picking-mode="Position" label="Checkout ID" name="CheckoutID" readonly="true" class="input-field response-field" />
+                    <ui:VisualElement class="button-container" style="flex-direction: row; justify-content: space-between;">
+                        <ui:Button text="Open in Browser" display-tooltip-when-elided="true" name="OpenBrowserButton" class="button-secondary mobile-friendly-button" style="flex-grow: 1; margin-right: 5px;" />
+                        <ui:Button text="Open in Safari View" display-tooltip-when-elided="true" name="OpenIOSViewButton" class="button-secondary mobile-friendly-button" style="flex-grow: 1; margin-left: 5px;" />
+                    </ui:VisualElement>
                 </ui:VisualElement>
             </ui:VisualElement>
         </ui:ScrollView>
