--- a/Assets/Stash.Samples/UI Toolkit/StoreUI/StoreUI.uxml
+++ b/Assets/Stash.Samples/UI Toolkit/StoreUI/StoreUI.uxml
@@ -1,54 +1,41 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="UnityEngine.UIElements" editor="UnityEditor.UIElements" schemaLocation="UnityEngine.UIElements ../UIElementsSchema/UnityEngine.UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/Stash.Samples/UI%20Toolkit/StoreUI/StoreUI.uss?fileID=7433441132597879392&amp;guid=6554e5a4da3944a0eb1ec160d6b1bd9a&amp;type=3#StoreUI" />
-    <ui:VisualElement name="store-container" class="store-container">
-        <ui:VisualElement name="header-bar" class="header-bar">
+    <ui:VisualElement name="store-container" class="store-container" style="-unity-font: url(&quot;project://database/Assets/Stash.Samples/Assets/FactorA-Medium.ttf?fileID=12800000&amp;guid=6b89bab2b57b04955867564d42be558d&amp;type=3#FactorA-Medium&quot;);">
+        <ui:VisualElement name="header-bar" class="header-bar" style="background-color: rgb(235, 255, 0);">
             <ui:VisualElement name="title-container" class="title-container" style="justify-content: flex-start;">
-                <ui:Label text="Stash SDK" name="app-title" class="app-title" />
+                <ui:Label name="app-title" class="app-title" style="color: rgb(0, 0, 0); background-image: url(&quot;project://database/Assets/Stash.Samples/Assets/logo_black.png?fileID=2800000&amp;guid=1a197255633f644688b4109926604a62&amp;type=3#logo_black&quot;); width: 160px; height: 23px;" />
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement name="tabs-container" class="tabs-container">
-            <ui:Button text="User" name="user-tab-button" class="tab-button" />
-            <ui:Button text="IAP" name="store-tab-button" class="tab-button tab-selected" />
+            <ui:Button text="Account" name="user-tab-button" class="tab-button" />
+            <ui:Button text="Stash Pay" name="store-tab-button" class="tab-button tab-selected" />
+            <ui:Button text="Webshop" name="webshop-tab-button" class="tab-button" />
         </ui:VisualElement>
         <ui:VisualElement name="tab-content" class="tab-content">
+            <ui:VisualElement class="content-overlay" />
             <ui:VisualElement name="user-tab-content" class="tab-panel" style="display: none;">
+                <ui:VisualElement class="tab-overlay" />
                 <ui:VisualElement name="user-profile" class="user-profile">
-                    <ui:Label text="User Profile" name="profile-title" class="section-title" />
-                    <ui:VisualElement name="login-container" class="login-container">
-                        <ui:Button text="Login" name="login-button" display-tooltip-when-elided="true" class="login-button" />
-                        <ui:Label text="Not logged in" name="profile-status" class="profile-status" />
-                    </ui:VisualElement>
-                    <ui:VisualElement name="profile-info" class="profile-info">
-                        <ui:VisualElement name="profile-card" class="profile-card">
-                            <ui:VisualElement name="profile-header" class="profile-card-header">
-                                <ui:Label text="User Name" name="profile-name" class="profile-name" />
+                    <ui:VisualElement name="profile-card" class="profile-card">
+                        <ui:VisualElement name="login-container" class="login-container">
+                            <ui:Label text="Not logged in" name="profile-status" class="profile-status" />
+                        </ui:VisualElement>
+                        <ui:VisualElement name="profile-details" class="profile-details">
+                            <ui:VisualElement name="detail-row" class="detail-row">
+                                <ui:Label text="User ID:" class="detail-label" />
+                                <ui:Label text="Loading..." name="user-id-value" class="detail-value" />
                             </ui:VisualElement>
-                            <ui:VisualElement name="profile-details" class="profile-details">
-                                <ui:VisualElement name="detail-row" class="detail-row">
-                                    <ui:Label text="User ID:" class="detail-label" />
-                                    <ui:Label text="--" name="user-id-value" class="detail-value" />
-                                </ui:VisualElement>
-                                <ui:VisualElement name="detail-row" class="detail-row">
-                                    <ui:Label text="Email:" class="detail-label" />
-                                    <ui:Label text="--" name="email-value" class="detail-value" />
-                                </ui:VisualElement>
-                                <ui:VisualElement name="detail-row" class="detail-row">
-                                    <ui:Label text="Expiry:" class="detail-label" />
-                                    <ui:Label text="--" name="token-expiry-value" class="detail-value" />
-                                </ui:VisualElement>
+                            <ui:VisualElement name="detail-row" class="detail-row">
+                                <ui:Label text="Email:" class="detail-label" />
+                                <ui:Label text="--" name="email-value" class="detail-value" />
                             </ui:VisualElement>
                         </ui:VisualElement>
-                        <ui:VisualElement name="attributes-card" class="profile-card">
-                            <ui:Label text="Additional Attributes" class="card-title" />
-                            <ui:ScrollView name="attributes-scroll" class="attributes-scroll">
-                                <ui:VisualElement name="attributes-container" class="attributes-container" />
-                            </ui:ScrollView>
-                        </ui:VisualElement>
-                        <ui:Button text="Force Refresh" name="refresh-token-button" class="refresh-button" style="display: none;" />
+                        <ui:Button text="LOGIN" name="login-button" display-tooltip-when-elided="true" class="login-button" />
                     </ui:VisualElement>
                 </ui:VisualElement>
             </ui:VisualElement>
             <ui:VisualElement name="store-tab-content" class="tab-panel" style="display: flex;">
+                <ui:VisualElement class="tab-overlay" />
                 <ui:ScrollView name="items-scroll-view" class="items-scroll-view">
                     <ui:VisualElement name="card-settings-container" class="card-settings-container" style="display: none;">
                         <ui:VisualElement class="settings-header">
@@ -93,9 +80,25 @@
                     <ui:VisualElement name="items-container" class="items-container" />
                 </ui:ScrollView>
             </ui:VisualElement>
-            <ui:VisualElement name="settings-tab" class="tab-content">
-                <ui:Label text="Settings" class="tab-title" />
+            <ui:VisualElement name="webshop-tab-content" class="tab-panel" style="display: none;">
+                <ui:VisualElement class="tab-overlay" />
+                <ui:VisualElement class="webshop-container">
+                    <ui:VisualElement class="webshop-card">
+                        <ui:VisualElement class="webshop-button-container">
+                            <ui:Label text="Open pre-authenticated webshop right from the game client." class="webshop-description" />
+                            <ui:Button text="Open Webshop" name="open-webshop-button" class="action-button" />
+                        </ui:VisualElement>
+                    </ui:VisualElement>
+                </ui:VisualElement>
             </ui:VisualElement>
+            <ui:VisualElement name="settings-tab" class="tab-content" />
+        </ui:VisualElement>
+        <ui:VisualElement name="help-description-dialog" class="help-description-dialog">
+            <ui:VisualElement class="help-description-header">
+                <ui:Label name="help-description-title" text="About" class="help-description-title" />
+                <ui:Button name="help-description-close-button" class="help-description-close-button" text="×" />
+            </ui:VisualElement>
+            <ui:Label name="help-description-text" class="help-description-content" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
