--- a/Assets/Stash.Samples/UI Toolkit/StoreUI/StoreUI.uss
+++ b/Assets/Stash.Samples/UI Toolkit/StoreUI/StoreUI.uss
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     font-size: 12px;
-    padding-top: env(safe-area-inset-top);
+    padding-top: 0;
     -unity-font: url("project://database/Assets/Stash.Samples/Assets/FactorA-Medium.ttf?fileID=102900000&guid=37e4d4308bfff4b4c960eecc029e5188&type=3#FactorA-Medium");
     -unity-font-style: normal;
     -unity-font-weight: 400;
@@ -37,7 +37,7 @@
     align-items: stretch;
     justify-content: flex-start;
     position: absolute;
-    top: env(safe-area-inset-top);
+    top: 0;
     left: 0;
     right: 0;
     bottom: 0;
